<resources>
    <string name="app_name">Sync Note</string>


    <string name="title_dynamicfeature">DynamicFeature</string>

    <string name="title_notes">Notes module</string>
    <string name="title_reminders">Reminders module</string>
    <string name="title_settings">Settings module</string>


    <string name="module_notes_name">notes</string>
    <string name="module_settings_name">settings</string>
    <string name="module_reminders_name">reminders</string>

    <string name="text_error">Error</string>
    <string name="text_success">Success</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_info">Info</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="text_yes">Yes</string>
    <string name="text_enter_a_title">Enter a Title</string>
    <string name="text_undo">Undo</string>


    <string name="text_notes_go_here">Notes go here</string>
    <string name="text_due_date">Due Date...</string>
    <string name="text_note_title_cannot_be_empty">Note title can not be empty.</string>
    <string name="text_Edit_body">Edit Body</string>
    <string name="text_Edit_title">Edit Title</string>
    <string name="text_Delete">Delete</string>
    <string name="text_Filter">Filter</string>
    <string name="text_Search">Search</string>

    <string name="filter_options">Filter Options</string>
    <string name="filter_asc">ASC</string>
    <string name="filter_desc">DESC</string>
    <string name="filter_title">Title</string>
    <string name="filter_date">Date</string>
    <string name="filter_title_or_date">Filter by Title or Date</string>
    <string name="filter_asc_desc">Filter by Order</string>
    <string name="text_Apply">Apply</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="email_address">Email Address</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register_button_text">Register</string>
    <string name="reset_password">Reset Password</string>
    <string name="password_constrsaint_text">Use 6 or more characters with at least one uppercase, one lowercase letter, one number and one special character .</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="hello_nwelcome_back">Hello\nWelcome Back!</string>
    <string name="sync">sync</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">or</string>
    <string name="note">Note</string>
    <string name="syncnote_logo">syncNote logo</string>
    <string name="hello_nget_started">Hello\nGet Started!</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="reset_password_instruction">Enter the email associated with your account and we\'ll send an email with instructions to reset your password.</string>
    <string name="floating_action_button_content_description">Add a Note</string>
    <string name="text_Create">Create</string>
    <string name="enter_a_title">Enter a Title</string>
    <string name="delete_text">Delete</string>
    <string name="make_a_copy">Make a copy</string>
    <string name="share">Share</string>
    <string name="open">open drawer</string>
    <string name="close">close drawer</string>
    <string name="notes">Notes</string>
    <string name="trash">Trash</string>
    <string name="no_browser">No browser found!</string>
    <string name="empty_trash">Empty Trash</string>
    <string name="restore">Restore</string>
    <string name="preferences">Preferences</string>
    <string name="change_password">Change Password</string>
    <string name="others">Others</string>
    <string name="about">About</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="app_version">1.2</string>
    <string name="app_version_text">App Version</string>
    <string name="rate">Rate</string>
    <string name="rate_description">Leave a positive rating on Google Play if you liked Sync Note</string>
    <string name="developer_name">Rahul Agarwal</string>
    <string name="developer">Developer</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="submit">Submit</string>
</resources>