<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/note_card_background"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:textSize="22sp"
        android:textColor="?attr/textColor"
        android:fontFamily="@font/gilroy_bold"
        android:text="@string/filter_options"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:id="@+id/filter_group"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/textColor"
            android:textSize="16sp"
            android:text="@string/filter_title_or_date"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/filter_title"
            android:text="@string/filter_title"
            android:textSize="16sp"
            android:textColor="?attr/textColor"
            android:layout_marginTop="20dp"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/filter_date"
            android:text="@string/filter_date"
            android:textSize="16sp"
            android:textColor="?attr/textColor"
            android:layout_marginTop="10dp"
            />

    </RadioGroup>


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:id="@+id/order_group"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/textColor"
            android:textSize="16sp"
            android:text="@string/filter_asc_desc"
            />


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/filter_asc"
            android:text="@string/filter_asc"
            android:textSize="16sp"
            android:textColor="?attr/textColor"
            android:layout_marginTop="20dp"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/filter_desc"
            android:text="@string/filter_desc"
            android:textSize="16sp"
            android:textColor="?attr/textColor"
            android:layout_marginTop="10dp"
            />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="30dp"
        >

        <TextView
            android:id="@+id/negative_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_cancel"
            android:fontFamily="@font/gilroy_semibold"
            android:textSize="16sp"
            android:textColor="@color/grey_light"
            android:layout_marginEnd="30dp"

            />

        <TextView
            android:id="@+id/positive_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_Apply"
            android:textSize="16sp"
            android:fontFamily="@font/gilroy_semibold"
            android:textColor="@color/colorPrimary"
            />

    </LinearLayout>



</LinearLayout>