<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".framework.presentation.settings.SettingFragment">

        <androidx.appcompat.widget.Toolbar android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/about_toolbar"
            android:backgroundTint="?attr/card_color"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            android:elevation="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:contentInsetEndWithActions="0dp"
            android:clipToPadding="false"
            app:layout_scrollFlags="scroll|enterAlways">


        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:focusable="true"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_version_text"
                android:fontFamily="@font/gilroy_medium"
                android:textSize="16sp"
                android:textColor="?attr/textColor"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/app_version"
                android:fontFamily="@font/gilroy_medium"
                android:textSize="14sp"
                android:textColor="#818A9C"/>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:focusable="true"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate"
                android:fontFamily="@font/gilroy_medium"
                android:textSize="16sp"
                android:textColor="?attr/textColor"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:id="@+id/theme_text"
                android:text="@string/rate_description"
                android:fontFamily="@font/gilroy_medium"
                android:textSize="14sp"
                android:textColor="#818A9C"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:focusable="true"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developer"
                android:fontFamily="@font/gilroy_medium"
                android:textSize="16sp"
                android:textColor="?attr/textColor"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/developer_name"
                android:fontFamily="@font/gilroy_medium"
                android:textSize="14sp"
                android:textColor="#818A9C"/>


        </LinearLayout>
    </LinearLayout>

</ScrollView>