<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:scrollbars="none"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/note_card_background"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:textSize="22sp"
            android:textColor="?attr/textColor"
            android:fontFamily="@font/gilroy_bold"
            android:text="Choose Theme"
            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/theme_group"
            >


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/theme_light"
                android:text="@string/light"
                android:textSize="16sp"
                android:fontFamily="@font/gilroy_medium"
                android:textColor="?attr/textColor"
                android:layout_marginTop="20dp"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/theme_dark"
                android:text="@string/dark"
                android:textSize="16sp"
                android:textColor="?attr/textColor"
                android:fontFamily="@font/gilroy_medium"
                android:layout_marginTop="10dp"
                />

        </RadioGroup>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_marginTop="16dp"
            >

            <TextView
                android:id="@+id/negative_button"
                android:background="?attr/selectableItemBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_cancel"
                android:padding="8dp"
                android:fontFamily="@font/gilroy_semibold"
                android:textSize="16sp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/grey_light"

                />
        </LinearLayout>



    </LinearLayout>
</ScrollView>