<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".framework.presentation.changePassword.ChangePasswordFragment">


    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:contentDescription="@string/syncnote_logo"
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:padding="3dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back_grey_24dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/gliroy_black"
            android:text="@string/change_password"
            android:textColor="?attr/textColor"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <com.notesync.notes.framework.presentation.util.CustomTextInputLayout
            android:id="@+id/old_password_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="25dp"
            android:background="@null"
            app:boxBackgroundColor="@null"
            app:boxBackgroundMode="none"
            android:minHeight="48dp"
            app:errorEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/grey_dark"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_oldPassword">


            <EditText
                android:id="@+id/oldPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/textfield_rectangle"
                android:ems="10"
                android:fontFamily="@font/gilroy_regular"
                android:hint="@string/old_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingHorizontal="21dp"
                android:paddingVertical="12dp"
                android:textColor="#000000"
                android:textColorHint="@color/grey_dark"
                android:textSize="16sp" />

        </com.notesync.notes.framework.presentation.util.CustomTextInputLayout>

        <com.notesync.notes.framework.presentation.util.CustomTextInputLayout
            android:id="@+id/new_password_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="25dp"
            android:background="@null"
            android:minHeight="48dp"
            app:boxBackgroundColor="@null"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/grey_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_password">


            <EditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/textfield_rectangle"
                android:ems="10"
                android:fontFamily="@font/gilroy_regular"
                android:textColorHint="@color/grey_dark"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:paddingHorizontal="21dp"
                android:paddingVertical="12dp"
                android:textColor="#000000"
                android:textSize="16sp" />

        </com.notesync.notes.framework.presentation.util.CustomTextInputLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="4dp"
            android:layout_marginTop="18dp"

            android:fontFamily="@font/gilroy_semibold"
            android:text="@string/password_constrsaint_text"
            android:textColor="?attr/metaTextColor"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/new_password_layout"
            app:layout_constraintStart_toStartOf="@+id/new_password_layout"
            app:layout_constraintTop_toBottomOf="@+id/new_password_layout" />

        <TextView
            android:id="@+id/text_oldPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/old_password"
            android:textColor="?attr/textColor"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/text_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/new_password"
            android:textColor="?attr/textColor"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/old_password_layout" />

        <Button
            android:id="@+id/submit_button"
            style="@style/ButtonTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:transitionName="auth_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

       
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>